[tool.poetry]
name = "pygoic"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Xiaodong Yang <yxdong.cc@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
